WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71680
[Qt][WK2] MiniBrowser should use urlFromUserInput()
https://bugs.webkit.org/show_bug.cgi?id=71680
Summary
[Qt][WK2] MiniBrowser should use urlFromUserInput()
Zeno Albisser
Reported
2011-11-07 06:46:51 PST
Currently MiniBrowser does nothing when an address with a missing http:// prefix is entered. Using the urlFromUserInput() method this could be automatically completed.
Attachments
patch for review.
(3.64 KB, patch)
2011-11-07 06:55 PST
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2011-11-07 06:55:50 PST
Created
attachment 113861
[details]
patch for review.
WebKit Review Bot
Comment 2
2011-11-07 08:06:43 PST
Comment on
attachment 113861
[details]
patch for review. Rejecting
attachment 113861
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: cripts/webkitpy/common/system/executive.py", line 420, in run_command close_fds=self._should_close_fds()) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/system/executive.py", line 476, in popen return subprocess.Popen(*args, **kwargs) File "/usr/lib/python2.6/subprocess.py", line 623, in __init__ errread, errwrite) File "/usr/lib/python2.6/subprocess.py", line 1141, in _execute_child raise child_exception TypeError: execv() arg 2 must contain only strings Full output:
http://queues.webkit.org/results/10332661
Tor Arne Vestbø
Comment 3
2011-11-07 08:18:34 PST
Comment on
attachment 113861
[details]
patch for review. let's try this again
WebKit Review Bot
Comment 4
2011-11-07 08:26:12 PST
Comment on
attachment 113861
[details]
patch for review. Rejecting
attachment 113861
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: cripts/webkitpy/common/system/executive.py", line 420, in run_command close_fds=self._should_close_fds()) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/system/executive.py", line 476, in popen return subprocess.Popen(*args, **kwargs) File "/usr/lib/python2.6/subprocess.py", line 623, in __init__ errread, errwrite) File "/usr/lib/python2.6/subprocess.py", line 1141, in _execute_child raise child_exception TypeError: execv() arg 2 must contain only strings Full output:
http://queues.webkit.org/results/10333719
Tor Arne Vestbø
Comment 5
2011-11-07 08:58:57 PST
Is it barfing on my name? Or something else?
Csaba Osztrogonác
Comment 6
2011-11-07 22:29:57 PST
(In reply to
comment #5
)
> Is it barfing on my name? Or something else?
Yes, CQ doesn't like our name:
https://bugs.webkit.org/show_bug.cgi?id=63452
, so it can't land patches reviewed by you or me. :(
Simon Hausmann
Comment 7
2011-11-07 23:50:04 PST
Comment on
attachment 113861
[details]
patch for review. Clearing flags on attachment: 113861 Committed
r99527
: <
http://trac.webkit.org/changeset/99527
>
Simon Hausmann
Comment 8
2011-11-07 23:50:12 PST
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 9
2011-11-07 23:50:42 PST
(In reply to
comment #6
)
> (In reply to
comment #5
) > > Is it barfing on my name? Or something else? > > Yes, CQ doesn't like our name:
https://bugs.webkit.org/show_bug.cgi?id=63452
, > so it can't land patches reviewed by you or me. :(
Weirdly enough webkit-patch land-from-bug <1234> works just fine (and worked for this bug, too :)
Csaba Osztrogonác
Comment 10
2011-11-08 00:02:29 PST
It broke WK2 build: /usr/bin/gold: obj/release/BrowserWindow.o: in function BrowserWindow::BrowserWindow(WindowOptions*):BrowserWindow.cpp(.text+0x58d): error: undefined reference to 'vtable for Utils' /usr/bin/gold: obj/release/BrowserWindow.o: in function BrowserWindow::BrowserWindow(WindowOptions*):BrowserWindow.cpp(.text+0x95d): error: undefined reference to 'vtable for Utils' It might be an icremental build issue because of new build system.
Simon Hausmann
Comment 11
2011-11-08 01:01:28 PST
(In reply to
comment #10
)
> It broke WK2 build: > > /usr/bin/gold: obj/release/BrowserWindow.o: in function BrowserWindow::BrowserWindow(WindowOptions*):BrowserWindow.cpp(.text+0x58d): error: undefined reference to 'vtable for Utils' > /usr/bin/gold: obj/release/BrowserWindow.o: in function BrowserWindow::BrowserWindow(WindowOptions*):BrowserWindow.cpp(.text+0x95d): error: undefined reference to 'vtable for Utils' > > > It might be an icremental build issue because of new build system.
Yeah, it is an incremental build issue. I touched the .pro file and then it all went fine on the bot.
Csaba Osztrogonác
Comment 12
2011-11-08 01:04:03 PST
I triggered a clean build on the bot and it works, so it is an incremental build bug. I filed a new bug report:
https://bugs.webkit.org/show_bug.cgi?id=71775
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug