[Qt][WK2] MiniBrowser should use urlFromUserInput() https://bugs.webkit.org/show_bug.cgi?id=71680

Use urlFromUserInput() / QUrl::fromUserInput() to automatically
complete urls in MiniBrowser.

Patch by Zeno Albisser <zeno.albisser@nokia.com> on 2011-11-07
Reviewed by Tor Arne Vestbø.

* MiniBrowser/qt/BrowserWindow.cpp:
(BrowserWindow::BrowserWindow):
(BrowserWindow::load):
* MiniBrowser/qt/qml/BrowserWindow.qml:
* MiniBrowser/qt/utils.cpp:
(Utils::urlFromUserInput):
* MiniBrowser/qt/utils.h:
(Utils::Utils):

Canonical link: https://commits.webkit.org/88100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99527 268f45cc-cd09-0410-ab3c-d52691b4dbfc